cabal-version: 3.0

name:                   cardano-node-pparams-api
version:                0.0
description:            The Cardano-node protocol parameters api server.
author:                 john.lotoski@iohk.io
maintainer:             devops@iohk.io
license:                Apache-2.0
build-type:             Simple

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Werror
                        -- Temporarily disable -Wall until mvp is done
                        -- -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

common maybe-unix
  if !os(windows)
     build-depends:     unix

library
  import:               base, project-config

  if flag(unexpected_thunks)
    cpp-options:        -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      CardanoNodePparamsApi

  build-depends:        aeson             >= 1.5.6.0
                        , bytestring
                        , cardano-api:{cardano-api,internal} ^>= 9.3
                        , scotty
                        , text
                        , transformers

executable cardano-node-pparams-api
  import:               base, project-config
  main-is:              Main.hs
  build-depends:        cardano-node-pparams-api
  ghc-options:          -threaded
